# EngineV2.0

./: CMakeLists.txt  README.md
.cache/clangd/index/: Input.cpp.485AB3643F491541.idx  Input.h.F9A7AB94EBFA35C3.idx  Logger.h.043EFEE9DE739FE6.idx  Renderer.cpp.9F74CC6215648D18.idx  Renderer.h.59D38E052D192641.idx  Shader.cpp.952EC51A2150DBA6.idx  Shader.h.5A104B1D3771E2EC.idx  Timer.cpp.3337AF957E53C025.idx  Timer.h.759AFFFAB7531B70.idx  Window.cpp.9EC921DC7AECE3E4.idx  Window.h.251B53B36EF9A6FB.idx  context.c.D432F5F273F44F3C.idx  egl_context.c.77E78E7953924890.idx  glad.c.57EB7EBC3BB6FF94.idx  glad.h.B035A2615961940A.idx  glfw3.h.17780868AA9E30EA.idx  glfw3native.h.2DC552EF8761B7CF.idx  glx_context.c.16B4504A640D08F3.idx  init.c.C559D2E34D1C54FC.idx  input.c.7798009AEE0BBE39.idx  internal.h.C45CD53E7A704CD3.idx  khrplatform.h.CBAED7799E3F5398.idx  linux_joystick.c.8C984C572A0D36C2.idx  linux_joystick.h.4CD3D5E7412F0383.idx  main.cpp.ED94727555113926.idx  mappings.h.1F0E7AA2B63E7CAF.idx  monitor.c.F6C54EDDDF0EA0FE.idx  null_init.c.CC7E5B6A45C75A40.idx  null_joystick.c.1971E1E3C1D120BF.idx  null_joystick.h.17B24285F96C9BB0.idx  null_monitor.c.256F4A9FCE14C5F9.idx  null_platform.h.CABE716D63CE23E1.idx  null_window.c.92024E173200F7EF.idx  osmesa_context.c.59F3B5813C013B17.idx  platform.c.29B762485B770AE9.idx  platform.h.17D451B6BAEAB461.idx  posix_module.c.33E013D0E0EB07F5.idx  posix_poll.c.3C3B7DF9BC54CFF9.idx  posix_poll.h.90F90A9551FF93A0.idx  posix_thread.c.EF4DF519C15A7F43.idx  (+15 more)
Engine/Core/: Input.cpp  Input.h  Logger.h  Timer.cpp  Timer.h
Engine/Platform/: Window.cpp  Window.h
Engine/Renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/: main.cpp
